@@ -63,6 +63,12 @@ namespace preferences {
 	double turbo_speed();
 	void save_turbo_speed(const double speed);
 
+	bool idle_anim();
+	void _set_idle_anim(const bool ison);
+
+	int idle_anim_rate();
+	void _set_idle_anim_rate(const int rate);
+
 	const std::string& language();
 	void set_language(const std::string& s);
 
