@@ -33,6 +33,10 @@ namespace preferences {
 	void set_turbo_speed(double speed);
 	void set_colour_cursors(bool value);
 
+	// control unit idle animations
+	void set_idle_anim(bool ison);
+	void set_idle_anim_rate(int rate);
+
 	void show_preferences_dialog(display& disp, const config& game_cfg);
 	bool show_video_mode_dialog(display& disp);
 	bool show_theme_dialog(display& disp);
