@@ -19,6 +19,8 @@ Version 1.3.7+svn:
  * graphics:
    * new graphics for the highwayman
    * no more idle animations for units next to an enemy unit
+   * new button and slider in preferences to switch unit idle animations on
+     and off and set their frequency
  * miscellaneous and bug fixes
    * various bug fixes and code cleanups
 
